--- a/cookbooks/awesome_app/.kitchen.yml
+++ b/cookbooks/awesome_app/.kitchen.yml
@@ -10,7 +10,12 @@ provisioner:
   name: chef_zero
 
 platforms:
-  - name: ubuntu-14.04
+  - name: ubuntu-12.04
+    driver_config:
+      customize:
+        memory: 1024
+
+#  - name: ubuntu-14.04
 #  - name: centos-7.1
 #  - name: centos-6.6
 
