--- a/cookbooks/awesome_app/.kitchen.yml
+++ b/cookbooks/awesome_app/.kitchen.yml
@@ -3,8 +3,8 @@ driver:
   name: vagrant
 
   network:
-#    - ["forwarded_port", {guest: 80, host: 8080}]
-    - ["private_network", {ip: "192.168.33.33"}]
+    - ["forwarded_port", {guest: 80, host: 8080}]
+#    - ["private_network", {ip: "192.168.33.33"}]
 
 provisioner:
   name: chef_zero
