--- a/cookbooks/awesome_app/.kitchen.yml
+++ b/cookbooks/awesome_app/.kitchen.yml
@@ -1,19 +1,25 @@
 ---
 driver:
-  name: vagrant
+#  name: vagrant
+  name: digitalocean
 
   network:
-    - ["forwarded_port", {guest: 80, host: 8080}]
+#    - ["forwarded_port", {guest: 80, host: 8080}]
 #    - ["private_network", {ip: "192.168.33.33"}]
 
 provisioner:
   name: chef_zero
 
 platforms:
+  # - name: ubuntu-12.04
+  #   driver_config:
+  #     customize:
+  #       memory: 1024
+
   - name: ubuntu-12.04
     driver_config:
-      customize:
-        memory: 1024
+      size: 1gb
+      region: sfo1
 
 #  - name: ubuntu-14.04
 #  - name: centos-7.1
