--- a/cookbooks/awesome_app/.kitchen.yml
+++ b/cookbooks/awesome_app/.kitchen.yml
@@ -1,12 +1,12 @@
 ---
 driver:
   name: vagrant
-  name: digitalocean
+  # name: digitalocean
   # name: docker
   # require_chef_omnibus: true
 
   network:
-#    - ["forwarded_port", {guest: 80, host: 8080}]
+    - ["forwarded_port", {guest: 80, host: 8080}]
 #    - ["private_network", {ip: "192.168.33.33"}]
 
 provisioner:
@@ -27,16 +27,16 @@ platforms:
   #       - 80:80
 
 # Virtualbox specifics
-  # - name: ubuntu-12.04
-  #   driver_config:
-  #     customize:
-  #       memory: 1024
-
-# Digital Ocean specifics
   - name: ubuntu-12.04
     driver_config:
-      size: 1gb
-      region: sfo1
+      customize:
+        memory: 1024
+
+# Digital Ocean specifics
+#  - name: ubuntu-12.04
+#    driver_config:
+#      size: 1gb
+#      region: sfo1
 
 #  - name: ubuntu-14.04
 #  - name: centos-7.1
